Changelog
=========

HEAD
~~~~

- Use custom serialization method to serialize static default
  translation blocks; we can't rely on `lxml` for sane
  output. [malthe]

- Make `default` symbol available to dynamic attribute
  evaluations. [malthe]

- Visit evaluation before assignment in order to support assignments
  that rely on the same name in the dynamic variable scope. [malthe]

- Conditions may now be inverted; this facilitates the bug-fix of an
  issue where omit conditions were multi-part. [malthe]

- Make sure that arguments passed into the `render`-method are
  introduced in every nested scope. [malthe]

- Added translation language to main scope and make sure redefining it
  inside a closure does not cause issues with nested scope
  locals. [malthe]

1.0b8 (released 16/11/2008)
~~~~~~~~~~~~~~~~~~~~~~~~~~~

- Only pretend to delete variables; this improves performance and
  guarantees that we don't attempt to delete a variables which is used
  in a nested scope (closure). It works, because the code generation
  transform silently drops the delete-statements, but removes them
  from its internal scope dictionary. [malthe]

- Remove variables from scope dictionary upon block exit. [malthe]

- Split out compile-function such that we can always write the source
  code to disk in debug-mode. [malthe]

- Correctly transfer scope to callback-function that will fill macro
  slot contents. Previously, we would precompute fill-slots, but this
  was wrong since it's expected to inherit the scope of the macro
  currently in use. [malthe]

- Made error handler compatible with Python 2.4 [malthe]

- Maintain symbol mappings for joined expressions. [malthe]

1.0b7 (released 15/11/2008)
~~~~~~~~~~~~~~~~~~~~~~~~~~~

- Fixed interpolation edge where a right curly brace not part of an
  interpolation expression would cancel a succeeding
  interpolation. [malthe]

- Pass `target_language` when using macros. [malthe]

1.0b6 (released 13/11/2008)
~~~~~~~~~~~~~~~~~~~~~~~~~~~
