@@ -4,6 +4,9 @@ Changelog
 HEAD
 ~~~~
 
+- Avoid self-closing tags that are not allowed in transitional
+  HTML. [malthe]
+
 - Use custom serialization method to serialize static default
   translation blocks; we can't rely on `lxml` for sane
   output. [malthe]
